# cv-pilot

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: Dockerfile  auth_utils.py  config.py  database.py  deps.py  docx_utils.py  gdocs_client.py  llm_client.py  main.py  migrate.py  pyproject.toml  rate_limit.py  storage.py
backend/data/: cv_pilot.db  seed_resume.json
backend/routes/: applications.py  auth.py  chat.py  gdocs.py  jobs.py  llm.py  pdf.py  resume.py
backend/tests/: conftest.py  test_auth_utils.py  test_gdocs_client.py  test_gdocs_prompt.py  test_health.py  test_jobs.py  test_resume_api.py  test_storage.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AppNav.tsx  BlockDiffView.tsx  BlockEditor.tsx  BlockResumePreview.tsx  ChatPanel.tsx  CoverLetterModal.tsx  ErrorBoundary.tsx  InlineDiffView.tsx  NavBar.tsx  OnboardingModal.tsx  OptimizeModal.tsx  ResumePreview.tsx  SnapshotHistory.tsx  Toolbar.tsx  VersionSelector.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: ApplicationsPage.tsx  EditorPage.tsx  GDocsPage.tsx  JobsPage.tsx  LoginPage.tsx
frontend/src/types/: blocks.ts
frontend/src/utils/: blockDiff.test.ts  blockDiff.ts  blocks.test.ts  blocks.ts  diff.test.ts  diff.ts  navigate.ts
