[project]
name = "cv-pilot-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "anthropic>=0.40.0",
    "playwright>=1.48.0",
    "markdown>=3.7",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
